[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
rand = ">0.1"


[[bin]]
name="1_1_convert_hex_to_base64"
path="src/standalone/1_1_convert_hex_to_base64.rs"

[[bin]]
name="1_2_fixed_xor"
path="src/standalone/1_2_fixed_xor.rs"

[[bin]]
name="1_3_single_byte_xor_cipher"
path="src/standalone/1_3_single_byte_xor_cipher.rs"

[[bin]]
name="1_4_detect_single_byte_xor_cipher"
path="src/standalone/1_4_detect_single_byte_xor_cipher.rs"

[[bin]]
name="1_5_rotation_key_xor"
path="src/standalone/1_5_rotation_key_xor.rs"

[[bin]]
name="1_6_break_repeating_key_xor"
path="src/standalone/1_6_break_repeating_key_xor.rs"

[[bin]]
name="1_7_aes_in_ecb_mode"
path="src/standalone/1_7_aes_in_ecb_mode.rs"

[[bin]]
name="1_8_detect_aes_in_ecb_mode"
path="src/standalone/1_8_detect_aes_in_ecb_mode.rs"

[[bin]]
name="2_9_implement_pkcs7_padding"
path="src/standalone/2_9_implement_pkcs7_padding.rs"

[[bin]]
name="2_10_implement_cbc_mode"
path="src/standalone/2_10_implement_cbc_mode.rs"

[[bin]]
name="2_11_an_ecb_cbc_detection_oracle"
path="src/standalone/2_11_an_ecb_cbc_detection_oracle.rs"

[[bin]]
name="2_12_byte_at_a_time_ecb_decryption_simple"
path="src/standalone/2_12_byte_at_a_time_ecb_decryption_simple.rs"

[[bin]]
name="2_13_ecb_cut_and_paste"
path="src/standalone/2_13_ecb_cut_and_paste.rs"

[[bin]]
name="2_14_byte_at_a_time_ecb_decryption_harder"
path="src/standalone/2_14_byte_at_a_time_ecb_decryption_harder.rs"

[[bin]]
name="2_15_pkcs7_padding_validation"
path="src/standalone/2_15_pkcs7_padding_validation.rs"
